<resources>

    <string name="app_name">Shareview</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_register">Register</string>
    <string name="activity_main_password">Password</string>
    <string name="activity_main_email">Email</string>
    <string name="activity_main_login">Login</string>
    <string name="activity_main_signup">Sign up</string>
	<string name="debug_on">Debug Mode is On</string>
	<string name="activity_close">Exit</string>
	<string name="activity_register_email">Email</string>
	<string name="activity_register_password">Email</string>
	<string name="activity_register_repeatpassword">Verify Email</string>
</resources>